--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ flutter:
   fonts:
     - family: Poppins
       fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-italic.ttf
+          style: italic
         - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 600
         - asset: assets/fonts/Poppins-Bold.ttf
           weight: 700
