--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   url_launcher: ^6.1.5
   flutter:
     sdk: flutter
+  loading_animation_widget: ^1.2.0+2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
