--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   loading_animation_widget: ^1.2.0+2
   http: ^0.13.5
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
